Tue Jun 17 09:30:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/contrib/mcpp/main.cpp:
        * TAO_IDL/contrib/mcpp/system.cpp:

          Fuzz errors, Untabify.

Mon Jun 16 18:50:55 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/tao_idl_mcpp.mpb:
        * TAO_IDL/contrib/mcpp/main.cpp:
        * TAO_IDL/contrib/mcpp/noconfig.H:
        * TAO_IDL/contrib/mcpp/support.cpp:
        * TAO_IDL/contrib/mcpp/system.cpp:

          Fixes for mcpp on Windows. 
        
Mon Jun 16 18:13:21 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/mfc/Resource.h:
        * orbsvcs/examples/ORT/Gateway.idl:
        * orbsvcs/examples/ORT/sum_server.idl:
        * tests/POA/EndpointPolicy/server.cpp:

          Untabify.

Mon Jun 16 17:51:31 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tao/EndpointPolicy/EndpointPolicy_Factory.cpp:
        * tao/EndpointPolicy/Endpoint_Value_Impl.h:
        * tao/EndpointPolicy/IIOPEndpointValue_i.h:
        * tao/EndpointPolicy/IIOPEndpointValue_i.cpp:

          Untabify.

Mon Jun 16 14:01:58 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/EndpointPolicy/EndpointPolicy_Factory.cpp:
        * tao/EndpointPolicy/Endpoint_Value_Impl.h:
        * tao/EndpointPolicy/IIOPEndpointValue_i.h:
        * tao/EndpointPolicy/IIOPEndpointValue_i.cpp:

          Add support for limiting the use of defaulted hostnames in IIOP
          endpoints to only be allowed when using multiple protocols on
          the ORB. The motivation for this limit is described in bugzilla
          3256.

        * tests/POA/EndpointPolicy/README:
        * tests/POA/EndpointPolicy/multi_prot.conf:
        * tests/POA/EndpointPolicy/run_test_dh.pl:
        * tests/POA/EndpointPolicy/run_test_lh.pl:
        * tests/POA/EndpointPolicy/server.cpp:

          Extend the test to accomodate the new capability of the